Fix sticker overflow on time Email confirmation temp commit

--- a/src/scss/partials/_chatBubble.scss
+++ b/src/scss/partials/_chatBubble.scss
@@ -506,6 +506,7 @@ $bubble-margin: .25rem;
   &.sticker {
     .attachment {
       border-radius: 0;
+      z-index: 1;
     }
 
     .bubble-content {
